# oxidized_git

./: .gitignore  Cargo.toml  LICENSE.md  README.md  current_version.json  package-lock.json  package.json  run_release.sh  vite.config.ts
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: main.yml
og-ui/: package-lock.json  package.json  vite.config.js
og-ui/src/: App.vue
og-ui/src/components/: TreeView.vue
src/: build.rs  git_manager.rs  main.rs  oxidized_git_app.rs  svg_row.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: OxidizedGitAppIcon.icns
src-tauri/src/: config_manager.rs  git_manager.rs  main.rs  parseable_info.rs  svg_row.rs
src-tauri/src/backend/: config_manager.rs  git_manager.rs  main_back.rs  mod.rs  parseable_info.rs  svg_row.rs
src/backend/: main_back.rs  mod.rs
src/frontend/: main_window.rs  main_window.slint
ui/: bootstrapTheming.css  externalGitOps.js  import_jquery.js  index.html  main.js  mainStyle.css  main_style.css  package-lock.json  package.json  svgManager.js  svg_manager.js  svg_row.js  treeView.css  updater.js  vite.config.ts
ui/deprecated/: index.html  main.js  treeView.css
ui/modules/: modalManager.js  repoView.js  tempTemplate.js  utils.js  welcomeView.js
ui/modules/modals/: pushModal.js  pushTagModal.js
ui/partials/: contextMenu.html  repoView.html  spinnerContainer.html  welcomeView.html
ui/partials/modals/: addRemoteModal.html  applyStashModal.html  branchModal.html  cherrypickModal.html  cloneModal.html  credentialsModal.html  deleteLocalBranchModal.html  errorModal.html  preferencesModal.html  pushModal.html  pushTagModal.html  revertModal.html  stashModal.html  tagModal.html  updateModal.html
ui/partials/repo-view-partials/: buttonBar.html  changesPane.html  commitGraphPane.html  conflictWarningBanner.html  leftColumn.html
ui/partials/repo-view-partials/changes-pane-partials/: cherrypickControls.html  commitControls.html  mergeControls.html  rebaseControls.html  revertControls.html
ui/src/: App.vue  main.js
ui/src/components/: ActionBar.vue  GitContent.vue  TreeView.vue
