[package]
name = "oxidized_git"
version = "2.0.0"
description = "A Rust Git Client Application"
authors = ["Joshua Patterson"]
license = "GPL-3.0-or-later"
edition = "2021"
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.*"
serde = { version = "1.0.*", features = ["derive"] }
serde_with = "2.1.*"
eframe = "0.20.*"
git2 = "0.15.*"
directories = "4.0.*"
keytar = "0.1.*"
html-escape = "0.2.*"
anyhow = { version = "1.0.*", features = ["backtrace"] }
chrono = "0.4.*"
rfd = "0.10.*"
# This is a hack so MacOS doesn't try to use homebrew's openssl. It should work with just the "native-tls-vendored" feature, but it doesn't for some reason...
openssl = { version = "*", features = ["vendored"] }
openssl-sys = { version = "*", features = ["vendored"] }
