[package]
name = "oxidized_git"
version = "0.1.0"
description = "A Tauri Git Client Application"
authors = ["Joshua Patterson"]
license = "GPL-3.0-or-later"
repository = ""
build = "build.rs"
default-run = "oxidized_git"
edition = "2021"
rust-version = "1.62"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.2", features = ["api-all"] }
git2 = "0.15"
rfd = "0.10"
home = "0.5"
keytar = "0.1"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
